--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9034,7 +9034,7 @@ zip.file("_micCal.txt", micCal);
       console.infoUpdate("Time aligning speakers...");
       // align speakers but leave subwoofers alone. ANY align command messes up subwoofer IR alignment
       const spIndices = Array.from({ length: nSpeakers }, (_, j) => j + 1);
-      await postNext('Remove IR delays', spIndices);
+      await postNext('Time align', spIndices);
       measurements = await fetch_mREW();
       // calculate audyssey IR start delay
       let totalIRShift = 0;
@@ -9097,6 +9097,8 @@ zip.file("_micCal.txt", micCal);
         }
         const filter = await postNext('Generate filters measurement', i);
         const filterIdx = Object.keys(filter.results)[0];
+        const filterName = `${commandId[i - nChannels]}-filters`;
+        await fetch_mREW(filterIdx, 'PUT', { title: filterName });
         const eqResponse = await postNext('Arithmetic', [i - nChannels, filterIdx], { function: "A * B" });
         const eqResponseIdx = Object.keys(eqResponse.results)[0];
         const eqResponseName = `${commandId[i - nChannels]}-equalized`;
@@ -9105,33 +9107,29 @@ zip.file("_micCal.txt", micCal);
       for (let i = nChannels * 2; i > nChannels; i--) {
         await postDelete(i);
       }
-      let count = 1;
-      for (let i = nChannels + 1; i < nChannels * 3; i += 2) {
-        await fetch_mREW(i, 'PUT', { title: `${commandId[count++]}-filters` });
-      }
       console.infoUpdate("Completed equalizing all channels!");
     }
     async function audyALCompensation() {
-      console.log(`Applying Audyssey auto-leveling compensation...`);
+      console.log(`Adjusting filter SPLs to prevent Audyssey auto-leveling...`);
+      console.info("Starting...");
       let spSum = 0.0;
       for (let i = 1; i <= nSpeakers; i++) {
         const filterResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', 2 * i + (nChannels - 1));
         const filterArray = await response2array(filterResponse, 500, 2000);
-        spSum = filterArray.reduce((acc, val) => acc + val, 0) / filterArray.length;
-        spSum = Math.round(spSum * 2) / 2;
-        customLevel[i] += spSum;
-        if (spSum != 0) { console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - spSum}dB → ${customLevel[i]}dB (${spSum}dB)`); }
+        spSum = -1 * filterArray.reduce((acc, val) => acc + val, 0) / filterArray.length;
+        await postNext('Add SPL offset', 2 * i + (nChannels - 1), { offset: spSum });
+        if (spSum != 0) { console.infoUpdate(`${commandId[i].padStart(3, ".")} - shifted: ${spSum.toFixed(2)}dB`); }
       }
       if (noSub) { return; } // no need to go further without subwoofer
       spSum = 0.0;
       const subFilterResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', nChannels * 3 - 1);
       const subFilterArray = await response2array(subFilterResponse, 30, 80);
-      spSum = subFilterArray.reduce((acc, val) => acc + val, 0) / subFilterArray.length;
-      spSum = Math.round(spSum * 2) / 2;
+      spSum = -1 * subFilterArray.reduce((acc, val) => acc + val, 0) / subFilterArray.length;
+      await postNext('Add SPL offset', nChannels * 3 - 1, { offset: spSum });
       for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
-        customLevel[i] += spSum;
-        if (spSum != 0) { console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - spSum}dB → ${customLevel[i]}dB (${spSum}dB)`); }
+        if (spSum != 0) { console.infoUpdate(`${commandId[i].padStart(3, ".")} - shifted: ${spSum.toFixed(2)}dB`); }
       }
+      console.infoUpdate("Completed filter SPL adjustments!");
     }
     function finalizeTrims() {
       console.log("Final speaker" + (noSub ? "" : " & subwoofer") + " trims:")
